# ENSISA

./: IA_IntroRL_ENSISA_2A_TD1_Prbl2.ipynb
TP note/: Animal.cpp  Animal.h  Bird.cpp  Bird.h  CMakeLists.txt  KNN.h  KNNDouble.h  KNNString.h  Mammal.cpp  Mammal.h  Reptile.cpp  Reptile.h  Zoo.cpp  Zoo.h  main.cpp
TP1/: CMakeLists.txt  Card.cpp  Card.h  EnergyCard.cpp  EnergyCard.h  Player.cpp  Player.h  PokemonCard.cpp  PokemonCard.h  TrainerCard.cpp  TrainerCard.h
