cmake_minimum_required(VERSION 4.0)
project(TP_not)

set(CMAKE_CXX_STANDARD 20)

add_executable(TP_note main.cpp
        main.cpp
        Animal.cpp
        Animal.h
        Mammal.cpp
        Mammal.h
        Bird.cpp
        Bird.h
        Reptile.cpp
        Reptile.h
        Zoo.cpp
        Zoo.h
        KNN.h
        KNNDouble.h
        KNNString.h
)
