cmake_minimum_required(VERSION 4.0)
project(TD1)

set(CMAKE_CXX_STANDARD 20)

add_executable(TD1 main.cpp
        Card.cpp
        Card.h
        PokemonCard.cpp
        PokemonCard.h
        EnergyCard.cpp
        EnergyCard.h
        TrainerCard.cpp
        TrainerCard.h
        TrainerCard.cpp
        TrainerCard.h
        Card.cpp
        Player.cpp
        Player.h)
